<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Card Emulator</string>

    <string name="status_error">Error</string>
    <string name="status_disconnected">Disconnected from terminal</string>
    <string name="status_capdu">C-APDU</string>
    <string name="status_rapdu">R-APDU</string>
    <string name="status_install">Installed Applets</string>

    <string name="action_copy">Copy Log</string>
    <string name="action_delete">Clear Log</string>
    <string name="action_help">Show Help</string>

    <string name="aid_gidsapplet">A000000397425446590201</string>
    <string name="aid_gidsapplet_truncated1">A0000003974254465902</string>
    <string name="aid_gidsapplet_truncated2">A00000039742544659</string>
    <string name="applet_gidsapplet">My Smart Logon\'s GIDS Applet</string>
    <string name="aid_isoapplet">F276A288BCFBA69D34F31001</string>
    <string name="applet_isoapplet">Philip Wendland\'s ISO Applet</string>
    <string name="aid_pivapplet">A00000030800001000</string>
    <string name="aid_pivapplet_truncated1">A000000308000010</string>
    <string name="aid_pivapplet_truncated2">A0000003080000</string>
    <string name="aid_pivapplet_truncated3">A00000030800</string>
    <string name="aid_pivapplet_truncated4">A000000308</string>
    <string name="applet_pivapplet">Alex Wilson\'s PIV Applet</string>
    <string name="aid_partial_openpgp">D27600012401</string>
    <string name="aid_openpgp">D2760001240102000000000000010000</string>
    <string name="applet_openpgp">Yubico\'s OpenPGP Applet</string>
    <string name="aid_oath">A000000527210101</string>
    <string name="applet_oath">Yubico\'s OATH Applet</string>
    <string name="applet_npa">TR-03110 Identity Card with Protected MRTD Application</string>
    <string name="aid_npa_eid">E80704007F00070302</string>
    <string name="aid_npa_emrtd">A0000002471001</string>
    <string name="aid_npa_esign">A000000167455349474E</string>
    <string name="startup_title">Tap To Emulate!</string>
    <string name="startup_message">The following smart card applets are supported:\n
        \n
        <b>OpenPGP Applet</b> <small>(AID D2760001240102000000000000010000)</small>\n
        <b>OATH Applet</b> <small>(AID A000000527210101)</small>\n
        <b>PIV Applet</b> <small>(AID A00000030800001000)</small>\n
        <b>ISO Applet</b> <small>(AID F276A288BCFBA69D34F31001)</small>\n
        <b>GIDS Applet</b> <small>(AID A000000397425446590201)</small>\n
        \n
        Place your device on a contact-less reader. When the reader issues a SELECT command for one of the application identifiers above, the emulator creates the appropriate applet. The emulated applet will then handle all subsequent APDUs.</string>
    <string name="action_settings">Settings</string>
    <string-array name="strEmulators">
        <item>@string/jcardsim</item>
        <item>@string/vicc</item>
    </string-array>
    <string name="jcardsim">Builtin Java Card Simulator</string>
    <string name="vicc">Remote Virtual Smart Card</string>

    <string name="vicc_config_info">If you choose the virtual smart card (VICC) as emulator, you need to start the it on your computer with the `—reversed` flag and configure the connection parameters here accordingly.</string>
    <string name="hint_vicc_port">VICC Port</string>
    <string name="hint_vicc_hostname">VICC Hostname</string>
    <string name="scheme_vicc">vicc</string>
    <string name="connect_disconnect">Connect/Disconnect</string>

</resources>
