<?xml version="1.0" encoding="utf-8"?>

<host-apdu-service xmlns:android="http://schemas.android.com/apk/res/android"
    android:description="@string/app_name"
    android:requireDeviceUnlock="false">

    <aid-group android:description="@string/applet_helloworld" android:category="other">
        <aid-filter android:name="@string/aid_helloworld"/>
    </aid-group>

    <aid-group android:description="@string/applet_openpgp" android:category="other">
        <aid-filter android:name="@string/aid_openpgp"/>
        <aid-filter android:name="@string/aid_partial_openpgp"/>
    </aid-group>

    <aid-group android:description="@string/applet_oath" android:category="other">
        <aid-filter android:name="@string/aid_oath"/>
    </aid-group>

    <aid-group android:description="@string/applet_isoapplet" android:category="other">
        <aid-filter android:name="@string/aid_isoapplet"/>
    </aid-group>

    <aid-group android:description="@string/applet_gidsapplet" android:category="other">
        <aid-filter android:name="@string/aid_gidsapplet"/>
        <aid-filter android:name="@string/aid_gidsapplet_truncated1"/>
        <aid-filter android:name="@string/aid_gidsapplet_truncated2"/>
    </aid-group>

</host-apdu-service>
