<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vsmartcard.remotesmartcardreader.app.MainActivity" >

    <item android:id="@+id/action_copy"
        android:title="@string/action_copy"
        android:icon="@drawable/ic_action_copy"
        app:showAsAction="withText" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item android:id="@+id/action_help"
    android:title="@string/action_help"
    android:icon="@android:drawable/ic_menu_help"
    app:showAsAction="withText" />

</menu>
